--- a/client.css
+++ b/client.css
@@ -1,1 +1,1 @@
-#quill-container[data-v-1d19581a],#quill-container[data-v-228f14ee]{height:400px}
+.flexWrapper{display:flex}.editorWrapper{flex-basis:50%}.quillWrapper{position:relative;z-index:99999}.preview{flex-basis:50%;background:#f9f9f9;padding:.5em 3em}#quill-container{height:400px}
